--- a/Workflows/processNewCandidate.xaml
+++ b/Workflows/processNewCandidate.xaml
@@ -5,7 +5,7 @@
     <x:Property Name="in_Connection" Type="InArgument(ui:DatabaseConnection)" />
     <x:Property Name="in_Candidate" Type="InArgument(sd:DataRow)" />
   </x:Members>
-  <sap:VirtualizedContainerService.HintSize>1671,2144</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1671,2025</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="18">
@@ -55,7 +55,7 @@
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="1681,1979" sap2010:WorkflowViewState.IdRef="Sequence_5">
+  <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="1681,1860" sap2010:WorkflowViewState.IdRef="Sequence_5">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="candidateId" />
       <Variable x:TypeArguments="x:Boolean" Name="inserted" />
@@ -68,7 +68,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Switch x:TypeArguments="x:Int32" DisplayName="Switch" Expression="[in_EmployeePosition]" sap:VirtualizedContainerService.HintSize="1639,316" sap2010:WorkflowViewState.IdRef="Switch`1_1">
+    <Switch x:TypeArguments="x:Int32" DisplayName="Switch" Expression="[in_EmployeePosition]" sap:VirtualizedContainerService.HintSize="1639,204" sap2010:WorkflowViewState.IdRef="Switch`1_1">
       <Assign x:Key="4" sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_2">
         <Assign.To>
           <OutArgument x:TypeArguments="x:String">[employeePosition]</OutArgument>
@@ -110,18 +110,18 @@
         <OutArgument x:TypeArguments="x:Boolean" x:Key="out_Status">[allowed]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1639,62" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;Allowed: &quot; + allowed.ToString + Environment.NewLine + Boolean.Parse(in_Candidate(&quot;validEmail&quot;).ToString ).ToString]" />
-    <If Condition="[Boolean.Parse(in_Candidate(&quot;validEmail&quot;).ToString )]" sap:VirtualizedContainerService.HintSize="1639,1302" sap2010:WorkflowViewState.IdRef="If_2">
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1639,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;Allowed: &quot; + allowed.ToString + Environment.NewLine + Boolean.Parse(in_Candidate(&quot;validEmail&quot;).ToString ).ToString]" />
+    <If Condition="[Boolean.Parse(in_Candidate(&quot;validEmail&quot;).ToString )]" sap:VirtualizedContainerService.HintSize="1639,1296" sap2010:WorkflowViewState.IdRef="If_2">
       <If.Then>
-        <Sequence sap:VirtualizedContainerService.HintSize="1218,1152" sap2010:WorkflowViewState.IdRef="Sequence_6">
+        <Sequence sap:VirtualizedContainerService.HintSize="1218,1148" sap2010:WorkflowViewState.IdRef="Sequence_6">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <If Condition="[allowed]" sap:VirtualizedContainerService.HintSize="1176,1060" sap2010:WorkflowViewState.IdRef="If_4">
+          <If Condition="[allowed]" sap:VirtualizedContainerService.HintSize="1176,1056" sap2010:WorkflowViewState.IdRef="If_4">
             <If.Then>
-              <Sequence sap:VirtualizedContainerService.HintSize="755,910" sap2010:WorkflowViewState.IdRef="Sequence_8">
+              <Sequence sap:VirtualizedContainerService.HintSize="755,908" sap2010:WorkflowViewState.IdRef="Sequence_8">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -150,13 +150,19 @@
                     <InArgument x:TypeArguments="sd:DataRow" x:Key="in_Candidate">[in_Candidate]</InArgument>
                   </ui:InvokeWorkflowFile.Arguments>
                 </ui:InvokeWorkflowFile>
-                <If Condition="[inserted]" DisplayName="If inserat hackerrank test id modificam status" sap:VirtualizedContainerService.HintSize="713,237" sap2010:WorkflowViewState.IdRef="If_3">
+                <If Condition="[inserted]" DisplayName="If inserat hackerrank test id modificam status" sap:VirtualizedContainerService.HintSize="713,235" sap2010:WorkflowViewState.IdRef="If_3">
                   <If.Then>
                     <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke UpdateEmployeeStatus workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_8" UnSafe="False" WorkflowFileName="Workflows\UpdateEmployeeStatus.xaml">
                       <ui:InvokeWorkflowFile.Arguments>
-                        <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[in_Connection]</InArgument>
-                        <InArgument x:TypeArguments="x:String" x:Key="in_Status">3</InArgument>
-                        <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">[candidateId]</InArgument>
+                        <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+                          <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
+                        </InArgument>
+                        <InArgument x:TypeArguments="x:String" x:Key="in_Status">
+                          <Literal x:TypeArguments="x:String">3</Literal>
+                        </InArgument>
+                        <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">
+                          <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="candidateId" />
+                        </InArgument>
                       </ui:InvokeWorkflowFile.Arguments>
                     </ui:InvokeWorkflowFile>
                   </If.Then>
@@ -198,25 +204,19 @@
               </Sequence>
             </If.Then>
             <If.Else>
-              <Sequence sap:VirtualizedContainerService.HintSize="376,412" sap2010:WorkflowViewState.IdRef="Sequence_9">
+              <Sequence sap:VirtualizedContainerService.HintSize="376,410" sap2010:WorkflowViewState.IdRef="Sequence_9">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     <x:Boolean x:Key="IsPinned">False</x:Boolean>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
-                <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,93" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Warn" Message="[&quot;The Candidate is already assigned to a Certification &quot;+  in_Candidate(&quot;Email Address&quot;).ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString]" />
+                <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,91" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Warn" Message="[&quot;The Candidate is already assigned to a Certification &quot;+  in_Candidate(&quot;Email Address&quot;).ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString]" />
                 <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InsertIntoRobotLogTable workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_12" UnSafe="False" WorkflowFileName="Workflows\InsertIntoRobotLogTable.xaml">
                   <ui:InvokeWorkflowFile.Arguments>
-                    <InArgument x:TypeArguments="x:String" x:Key="in_ID">
-                      <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;partnerId&quot;).ToString" />
-                    </InArgument>
-                    <InArgument x:TypeArguments="x:String" x:Key="in_RobotLog">
-                      <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="&quot;The Candidate is already assigned to a Certification &quot;+  in_Candidate(&quot;Email Address&quot;).ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString" />
-                    </InArgument>
-                    <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
-                      <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
-                    </InArgument>
+                    <InArgument x:TypeArguments="x:String" x:Key="in_ID">[in_Candidate("partnerId").ToString]</InArgument>
+                    <InArgument x:TypeArguments="x:String" x:Key="in_RobotLog" xml:space="preserve">["The Candidate is already assigned to a Certification "+  in_Candidate("Email Address").ToString  + " Position: " + in_EmployeePosition.ToString]</InArgument>
+                    <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[in_Connection]</InArgument>
                   </ui:InvokeWorkflowFile.Arguments>
                 </ui:InvokeWorkflowFile>
                 <Assign sap:VirtualizedContainerService.HintSize="334,60" sap2010:WorkflowViewState.IdRef="Assign_7">
@@ -243,15 +243,9 @@
           <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,93" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Warn" Message="[&quot;The Candidate email is not valid &quot;+  in_Candidate(&quot;Email Address&quot;).ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString]" />
           <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InsertIntoRobotLogTable workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_7" UnSafe="False" WorkflowFileName="Workflows\InsertIntoRobotLogTable.xaml">
             <ui:InvokeWorkflowFile.Arguments>
-              <InArgument x:TypeArguments="x:String" x:Key="in_ID">
-                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;partnerId&quot;).ToString" />
-              </InArgument>
-              <InArgument x:TypeArguments="x:String" x:Key="in_RobotLog">
-                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="&quot;The Candidate email is not valid &quot;+  in_Candidate(&quot;Email Address&quot;).ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString" />
-              </InArgument>
-              <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
-                <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
-              </InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_ID">[in_Candidate("partnerId").ToString]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_RobotLog" xml:space="preserve">["The Candidate email is not valid "+  in_Candidate("Email Address").ToString  + " Position: " + in_EmployeePosition.ToString]</InArgument>
+              <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[in_Connection]</InArgument>
             </ui:InvokeWorkflowFile.Arguments>
           </ui:InvokeWorkflowFile>
           <Assign sap:VirtualizedContainerService.HintSize="334,60" sap2010:WorkflowViewState.IdRef="Assign_8">
